# missionpack2

./: .gitignore  CLIENT.md  README.md  SERVER.md  description.txt  missionpack2.bat
docs/: CLIENT.md  SERVER.md
src/: CMakeLists.txt  debug.bat  release.bat
src/assets/: gameinfo.txt
src/assets/menu/medals/: medal_arena.tga
src/assets/missions/: common.cfg  demo1.cfg  demo2.cfg  demo3.cfg
src/assets/scripts/: gfx_ua.shader  ui_kc.shader
src/assets/textures/sfx2/: detail2.tga
src/cmake/: WriteDescription.cmake
src/code/cgame/: CMakeLists.txt  cg_consolecmds.c  cg_cvar.h  cg_draw.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_newdraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_scoreboard.c  cg_servercmds.c  cg_view.c  cg_weapons.c  cgame_ta.q3asm  cgame_ua.bat
src/code/common/: jsmndr.c  jsmndr.h
src/code/game/: CMakeLists.txt  ai_chat.c  ai_cmd.c  ai_dmnet.c  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_team.c  ai_vcmd.c  bg_misc.c  bg_newgame.c  bg_pmove.c  bg_public.h  g_active.c  g_arena.c  g_arena.h  g_arenas.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_cvar.h  g_items.c  g_local.h  g_main.c  g_misc.c  g_missile.c  g_mover.c  g_newgame.c  g_newgame.h  g_rankings.c  g_rankings.h  g_session.c  g_spawn.c  g_team.c  g_team.h  g_weapon.c  game_ta.q3asm  game_ua.bat  inv.h
src/code/ui/: CMakeLists.txt  ui.bat  ui.q3asm  ui_atoms.c  ui_cvar.h  ui_gameinfo.c  ui_local.h  ui_main.c  ui_shared.c
src/src_assets/menu/medals/: medal_arena.pdn
src/ui/: cdkey.menu  controls.menu  createserver.menu  credit.menu  default.menu  hud.menu  ingame.menu  ingame.txt  ingame_addbot.menu  ingame_callvote.menu  ingame_callvote2.menu  ingame_join.menu  ingame_leave.menu  ingame_options.menu  ingame_orders.menu  ingame_orders2.menu  ingame_player.menu  ingame_vote.menu  menudef.h  options.menu  player.menu  resetscore.menu  score.menu  setup.menu  sp_demo.menu  system.menu
